--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,13 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(lldb) Launch",
-      "type": "cppdbg",
+      "name": "C/C++ Runner: Debug Session",
+      "type": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/mkdirt",
       "args": ["foo"],
-      "stopAtEntry": false,
-      "cwd": "${fileDirname}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "lldb"
+      "cwd": ".",
+      "program": "./mkdirt"
     }
-
   ]
 }
